# xctx_project_p51_ModeSwitch

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xctx/iplay/modeswitch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/xctx/iplay/modeswitch/: IUartServer.aidl
app/src/main/cpp/: BpGameEventService.cpp  IGameEventService.h  game_client.cpp  native-lib.cpp  native-uart-control.cpp  native-uart_control.cpp
app/src/main/java/com/xctx/iplay/modeswitch/: MainActivity.java  NativeUartLib.java
app/src/main/java/com/xctx/iplay/modeswitch/activity/: MainActivity.java
app/src/main/java/com/xctx/iplay/modeswitch/jni/: NativeGameEventServiceLib.java  NativeUartLib.java
app/src/main/java/com/xctx/iplay/modeswitch/service/: GameSDKService.java
app/src/main/java/com/xctx/iplay/modeswitch/utils/: AppHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xctx/iplay/modeswitch/: ExampleUnitTest.java
